# gazelle-bugreport-1-client

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go
